--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "parcel-project-template",
+  "name": "explore-indonesia",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://Viktoriia38.github.io/explore-indonesia",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /explore-indonesia/"
   },
   "repository": {
     "type": "git",
